working with js

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   <body>
     <nav>
       <div class="navbar">
-        <p class="Welcome">Welcome back, John</p>
+        <p class="welcome">Login to get started</p>
         <img src="./logo.png" class="logo" alt="" />
         <form action="" class="space">
           <input
             type="text"
             name="user"
-            class="input-transform"
+            class="input-transform login_user"
             placeholder="user"
           />
           <input
             type="text"
             name="pin"
-            class="input-transform"
+            class="input-transform login_pin"
             maxlength="4"
             placeholder="PIN"
           />
-          <button class="address">&rarr;</button>
+          <button class="address login-btn">&rarr;</button>
         </form>
       </div>
     </nav>
