commit js changees and addition

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       <div class="balance">
         <div>
           <h1 class="balace_label">Current balance</h1>
-          <p class="balance_date">as of <span>05/03/2035</span></p>
+          <p class="balance_date">
+            as of <span class="label-date">05/03/2035</span>
+          </p>
         </div>
         <div class="balance_value">0.0001&pound;</div>
       </div>
